--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Modluc</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-ico" href="assets/img/tabLogo.png">
+    <link rel="icon" type="image/x-icon" href="assets/img/tabLogo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>body{background-color:#000}</style><link rel="stylesheet" href="styles.341ababb92ba8c08.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.341ababb92ba8c08.css"></noscript></head>
